<resources>
    <string name="app_name">StarWars</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="diameter">Diameter:</string>
    <string name="name">Name:</string>
    <string name="population">Population:</string>
    <string name="gender">Gender:</string>
    <string name="model">Model:</string>
    <string name="passengers">Passengers:</string>
    <string name="starships">Starships:</string>
    <string name="films">Films:</string>
</resources>